--- a/helloworld/src/main/resources/config.properties
+++ b/helloworld/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 # 钱包密码
-password=12345678
+password=123456
 # 钱包路径
-path=/home/littleredhat/.ethereum/keystore/UTC--2018-01-19T09-25-10.172617102Z--a3a10168ebab342d1d2205f35023a756216c5d5b
+path=D:\\DApp\\node1\\data\\keystore\\UTC--2018-06-20T07-29-00.674715200Z--dda114818beedfc46d5497d8f25e499806ca65d0
 # 钱包目录
-directory=/home/littleredhat/.ethereum/keystore
+directory=D:\\DApp\\node1\\data\\keystore
 # 合约地址
-helloworldAddr=0x5ac0Fb34E998F2B06bab21Df5f9BFeEFAb535Dbd
+helloworldAddr=b690cca6f5f60e662cbaf98795811ac3f2e39fbd
